fix: Fixes alignment of app health application status panel #14708

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -134,7 +134,7 @@
 
     &__item-value {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         margin-bottom: 0.5em;
         font-weight: 500;
         .fa {
